--- a/kindlepocket-web/pom.xml
+++ b/kindlepocket-web/pom.xml
@@ -70,6 +70,15 @@
 
 	</dependencies>
 	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<plugins>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
