--- a/kindlepocket-cms/pom.xml
+++ b/kindlepocket-cms/pom.xml
@@ -18,7 +18,7 @@
 
 		<!-- <dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
+			<artifactId>spridddng-data-mongodb</artifactId>
 			<version>1.9.1.RELEASE</version>
 		</dependency> -->
 
