--- a/kindlepocket-web/src/main/resources/application.properties
+++ b/kindlepocket-web/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-#spring.mvc.view.prefix=/templates/views/
+#spring.mvc.view.prefix=/
 #
 #spring.mvc.view.suffix=.html
 
 #spring.thymeleaf.prefix=/WEB-INF/views/
 #spring.thymeleaf.suffix=.html
-
+#spring.thymeleaf.mode = LEGACYHTML5
+spring.thymeleaf.enabled=false
