这里我只修改了三个项目中的文件，build.gradle 文件相当于 pom.xml，是基于gradle构建的配置文件，可以随时删掉，gitignore 增加了一些常用排除文件

--- a/kindlepocket-web/src/main/resources/application.properties
+++ b/kindlepocket-web/src/main/resources/application.properties
@@ -6,3 +6,6 @@
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode = LEGACYHTML5
 spring.thymeleaf.enabled=false
+# 这里是配置默认的ViewResolver,注意此处必须要加prefix,否则会重新做一次定向,从而导致死循环
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.html
