--- a/kindlepocket-web/src/main/resources/application.properties
+++ b/kindlepocket-web/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 
 #spring.thymeleaf.prefix=/WEB-INF/views/
 #spring.thymeleaf.suffix=.html
+
 #spring.thymeleaf.mode = LEGACYHTML5
+
 spring.thymeleaf.enabled=false
-# 这里是配置默认的ViewResolver,注意此处必须要加prefix,否则会重新做一次定向,从而导致死循环
-spring.mvc.view.prefix=/pages/
+spring.mvc.view.prefix=/html/
 spring.mvc.view.suffix=.html
