[nasuf]userInfo display & update

--- a/kindlepocket-web/src/main/resources/application.properties
+++ b/kindlepocket-web/src/main/resources/application.properties
@@ -7,6 +7,10 @@
 
 #spring.thymeleaf.mode = LEGACYHTML5
 
-spring.thymeleaf.enabled=false
+#spring.thymeleaf.enabled=false
 spring.mvc.view.prefix=/html/
 spring.mvc.view.suffix=.html
+server.port=9090
+
+#config for Favicon
+spring.mvc.favicon.enabled = false
