--- a/kindlepocket-cms/pom.xml
+++ b/kindlepocket-cms/pom.xml
@@ -63,6 +63,11 @@
 			<version>1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
