--- a/kindlepocket-web/pom.xml
+++ b/kindlepocket-web/pom.xml
@@ -94,6 +94,11 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
