[nasuf] finish fileUpload

--- a/kindlepocket-cms/src/main/resources/application.properties
+++ b/kindlepocket-cms/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9091
 
-spring.config.location=/
-spring.config.name=config.properties
+spring.mvc.view.prefix=/html/
+spring.mvc.view.suffix=.html
+
