[nasuf] save uploaded file to gridFS and collection in the same time; upload files to the specific linux path; gridfs read file from linux path

--- a/kindlepocket-cms/pom.xml
+++ b/kindlepocket-cms/pom.xml
@@ -73,6 +73,13 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
