[nasuf] move book files to destination directory after finishing saving book files to gridFS and collection

--- a/kindlepocket-cms/src/main/resources/application.properties
+++ b/kindlepocket-cms/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=9091
 spring.mvc.view.prefix=/html/
 spring.mvc.view.suffix=.html
 
+multipart.maxFileSize=50Mb
+multipart.maxRequestSize=50Mb
