[nasuf] fix fessy code issue

--- a/kindlepocket-cms/pom.xml
+++ b/kindlepocket-cms/pom.xml
@@ -119,6 +119,13 @@
 			<version>RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sourceforge.jchardet</groupId>
+			<artifactId>jchardet</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
